--- a/Credit_hazard_Forecasting.ipynb
+++ b/Credit_hazard_Forecasting.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,12 +17,52 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/divya-medarametla/CMPE-255-Credit_Hazard-Forecasting/blob/main/Credit_hazard_Forecasting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import pandas as pd\n",
+        "import pandas as pd\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import plotly.figure_factory as ff\n",
+        "import numpy as np\n",
+        "from IPython.display import display\n",
+        "import plotly.express as px\n",
+        "from imblearn.over_sampling import SMOTE\n",
+        "from sklearn.model_selection import KFold, cross_validate, train_test_split\n",
+        "import xgboost as xgb\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "from sklearn.metrics import plot_confusion_matrix\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import precision_score\n",
+        "from sklearn.metrics import recall_score\n",
+        "from sklearn.metrics import f1_score\n",
+        "from sklearn.metrics import cohen_kappa_score\n",
+        "from sklearn.metrics import roc_auc_score\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.metrics import plot_roc_curve\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
+        "from sklearn import datasets, metrics, model_selection, svm\n",
+        "\n",
         "credit_approval = pd.read_csv(\"credit_risk_dataset.csv\", header = None)\n",
         "credit_approval.head()"
       ],
@@ -31,9 +72,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 270
         },
-        "outputId": "64a2d7c9-3e5b-4774-a9d6-d0d5975dd3d0"
+        "outputId": "37e12776-5a9f-499d-cbc1-b467b3cd60b8"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -62,7 +103,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5c95339c-bc7c-48a5-b840-b1a2da35d0c1\">\n",
+              "  <div id=\"df-6651e3f9-56e3-4394-bfbb-2bfd17ade6c9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -175,7 +216,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5c95339c-bc7c-48a5-b840-b1a2da35d0c1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6651e3f9-56e3-4394-bfbb-2bfd17ade6c9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -226,12 +267,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5c95339c-bc7c-48a5-b840-b1a2da35d0c1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-6651e3f9-56e3-4394-bfbb-2bfd17ade6c9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5c95339c-bc7c-48a5-b840-b1a2da35d0c1');\n",
+              "          const element = document.querySelector('#df-6651e3f9-56e3-4394-bfbb-2bfd17ade6c9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -254,9 +295,67 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os"
+      ],
+      "metadata": {
+        "id": "ftH3OQixc48z"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DATASET_DIR='dataset/'\n",
+        "DATASET_FILENAME='dataset_'"
+      ],
+      "metadata": {
+        "id": "Zp7tUYuoeC5q"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def read_dataset(file_path):\n",
+        "    \"\"\"\n",
+        "    This function is used to read data from file and produce dataframe with file contents.\n",
+        "    \n",
+        "    Input: file_path\n",
+        "    \n",
+        "    Output: Dataframe with file contents\n",
+        "    \n",
+        "    \"\"\"\n",
+        "    data_flag=False\n",
+        "    data=[]\n",
+        "    features=[]\n",
+        "    with open(file_path) as f:\n",
+        "        all_lines=f.readlines()\n",
+        "        for line in all_lines:\n",
+        "            if '@ATTRIBUTE' in line:\n",
+        "                _,feature_name,_=line.split(' ')\n",
+        "                features.append(feature_name)\n",
+        "            if data_flag:\n",
+        "                line=line.replace(\"\\n\",'')\n",
+        "                data.append(line.split(','))\n",
+        "            if '@DATA' in line:\n",
+        "                data_flag=True   \n",
+        "    df_data=pd.DataFrame(data=data,columns=features)\n",
+        "    return df_data\n"
+      ],
+      "metadata": {
+        "id": "058VdocYdyxK"
+      },
+      "execution_count": 19,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -268,7 +367,7 @@
       "metadata": {
         "id": "DMY-ZEKcDfC7"
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -286,7 +385,7 @@
         "id": "aJfqCDZHtqtH",
         "outputId": "61212c9c-6687-4740-d9c6-ef041cf9da0e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +485,7 @@
         "id": "69yca1XnvwSU",
         "outputId": "f4c837d7-9607-4005-a4a6-8d2ac1332088"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +563,7 @@
         "id": "Obxb1T2DxAgJ",
         "outputId": "9f226c12-5228-447d-f055-167a54cbd013"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,7 +611,7 @@
         "id": "msfivrk1zHq8",
         "outputId": "a23ac1f5-3db1-4c81-f6b9-e22c66761528"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,7 +647,7 @@
         "id": "v4vzwrd30h5b",
         "outputId": "fcd5cef0-77de-4cd3-94d5-0c80631edf3a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +697,7 @@
       "metadata": {
         "id": "uY1xpzTmDpBr"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +715,7 @@
         },
         "outputId": "87f522ee-bf29-41a1-8b0b-8a6dbcbd81d7"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
