--- a/Credit_hazard_Forecasting.ipynb
+++ b/Credit_hazard_Forecasting.ipynb
@@ -314,13 +314,268 @@
       "cell_type": "code",
       "source": [
         "DATASET_DIR='dataset/'\n",
-        "DATASET_FILENAME='dataset_'"
+        "DATASET_FILENAME='credit_risk_dataset.csv'"
       ],
       "metadata": {
         "id": "Zp7tUYuoeC5q"
       },
-      "execution_count": 18,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "credit_approval.describe()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        },
+        "id": "LKSVJ0YOgnsC",
+        "outputId": "34b68e54-47a9-4d3a-84a0-a24256f45424"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "           0      1      2      3          4      5      6      7      8   \\\n",
+              "count   32582  32582  32582  31687      32582  32582  32582  29466  32582   \n",
+              "unique     59   4296      5     37          7      8    754    349      3   \n",
+              "top        23  60000   RENT    0.0  EDUCATION      A  10000   7.51      0   \n",
+              "freq     3889   1046  16446   4105       6453  10777   2664    756  25473   \n",
+              "\n",
+              "           9      10     11  \n",
+              "count   32582  32582  32582  \n",
+              "unique     78      3     30  \n",
+              "top       0.1      N      2  \n",
+              "freq     1533  26836   5965  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-fb36e388-25dc-4aab-b235-f9d3d1771cc3\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
+              "      <th>3</th>\n",
+              "      <th>4</th>\n",
+              "      <th>5</th>\n",
+              "      <th>6</th>\n",
+              "      <th>7</th>\n",
+              "      <th>8</th>\n",
+              "      <th>9</th>\n",
+              "      <th>10</th>\n",
+              "      <th>11</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>32582</td>\n",
+              "      <td>32582</td>\n",
+              "      <td>32582</td>\n",
+              "      <td>31687</td>\n",
+              "      <td>32582</td>\n",
+              "      <td>32582</td>\n",
+              "      <td>32582</td>\n",
+              "      <td>29466</td>\n",
+              "      <td>32582</td>\n",
+              "      <td>32582</td>\n",
+              "      <td>32582</td>\n",
+              "      <td>32582</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>unique</th>\n",
+              "      <td>59</td>\n",
+              "      <td>4296</td>\n",
+              "      <td>5</td>\n",
+              "      <td>37</td>\n",
+              "      <td>7</td>\n",
+              "      <td>8</td>\n",
+              "      <td>754</td>\n",
+              "      <td>349</td>\n",
+              "      <td>3</td>\n",
+              "      <td>78</td>\n",
+              "      <td>3</td>\n",
+              "      <td>30</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>top</th>\n",
+              "      <td>23</td>\n",
+              "      <td>60000</td>\n",
+              "      <td>RENT</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>EDUCATION</td>\n",
+              "      <td>A</td>\n",
+              "      <td>10000</td>\n",
+              "      <td>7.51</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>N</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>freq</th>\n",
+              "      <td>3889</td>\n",
+              "      <td>1046</td>\n",
+              "      <td>16446</td>\n",
+              "      <td>4105</td>\n",
+              "      <td>6453</td>\n",
+              "      <td>10777</td>\n",
+              "      <td>2664</td>\n",
+              "      <td>756</td>\n",
+              "      <td>25473</td>\n",
+              "      <td>1533</td>\n",
+              "      <td>26836</td>\n",
+              "      <td>5965</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fb36e388-25dc-4aab-b235-f9d3d1771cc3')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-fb36e388-25dc-4aab-b235-f9d3d1771cc3 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-fb36e388-25dc-4aab-b235-f9d3d1771cc3');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "credit_approval.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z9W9SWAFhkie",
+        "outputId": "5b4d8a3e-9dbc-49a8-940a-12b87390a3da"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 32582 entries, 0 to 32581\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column  Non-Null Count  Dtype \n",
+            "---  ------  --------------  ----- \n",
+            " 0   0       32582 non-null  object\n",
+            " 1   1       32582 non-null  object\n",
+            " 2   2       32582 non-null  object\n",
+            " 3   3       31687 non-null  object\n",
+            " 4   4       32582 non-null  object\n",
+            " 5   5       32582 non-null  object\n",
+            " 6   6       32582 non-null  object\n",
+            " 7   7       29466 non-null  object\n",
+            " 8   8       32582 non-null  object\n",
+            " 9   9       32582 non-null  object\n",
+            " 10  10      32582 non-null  object\n",
+            " 11  11      32582 non-null  object\n",
+            "dtypes: object(12)\n",
+            "memory usage: 3.0+ MB\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
