--- a/Credit_hazard_Forecasting.ipynb
+++ b/Credit_hazard_Forecasting.ipynb
@@ -2169,12 +2169,332 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "credit_approval.to_csv('crx_clean.data')\n",
+        "credit_approval.head(6)"
+      ],
       "metadata": {
-        "id": "qttYiTeD9gDT"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 427
+        },
+        "id": "qttYiTeD9gDT",
+        "outputId": "9bb90c2c-8c5e-4fc8-c260-619d5c90b23a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "           0              1                      2                  3   \\\n",
+              "0  person_age  person_income  person_home_ownership  person_emp_length   \n",
+              "1          22          59000                   RENT              123.0   \n",
+              "2          21           9600                    OWN                5.0   \n",
+              "3          25           9600               MORTGAGE                1.0   \n",
+              "4          23          65500                   RENT                4.0   \n",
+              "5          24          54400                   RENT                8.0   \n",
+              "6          21           9900                    OWN                2.0   \n",
+              "7          26          77100                   RENT                8.0   \n",
+              "8          24          78956                   RENT                5.0   \n",
+              "9          24          83000                   RENT                8.0   \n",
+              "\n",
+              "            4           5          6              7            8   \\\n",
+              "0  loan_intent  loan_grade  loan_amnt  loan_int_rate  loan_status   \n",
+              "1     PERSONAL           D      35000          16.02            1   \n",
+              "2    EDUCATION           B       1000          11.14            0   \n",
+              "3      MEDICAL           C       5500          12.87            1   \n",
+              "4      MEDICAL           C      35000          15.23            1   \n",
+              "5      MEDICAL           C      35000          14.27            1   \n",
+              "6      VENTURE           A       2500           7.14            1   \n",
+              "7    EDUCATION           B      35000          12.42            1   \n",
+              "8      MEDICAL           B      35000          11.11            1   \n",
+              "9     PERSONAL           A      35000            8.9            1   \n",
+              "\n",
+              "                    9                          10                          11  \n",
+              "0  loan_percent_income  cb_person_default_on_file  cb_person_cred_hist_length  \n",
+              "1                 0.59                          Y                           3  \n",
+              "2                  0.1                          N                           2  \n",
+              "3                 0.57                          N                           3  \n",
+              "4                 0.53                          N                           2  \n",
+              "5                 0.55                          Y                           4  \n",
+              "6                 0.25                          N                           2  \n",
+              "7                 0.45                          N                           3  \n",
+              "8                 0.44                          N                           4  \n",
+              "9                 0.42                          N                           2  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-acfb0221-0af7-4b61-8dc2-0b628885ef90\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
+              "      <th>3</th>\n",
+              "      <th>4</th>\n",
+              "      <th>5</th>\n",
+              "      <th>6</th>\n",
+              "      <th>7</th>\n",
+              "      <th>8</th>\n",
+              "      <th>9</th>\n",
+              "      <th>10</th>\n",
+              "      <th>11</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>person_age</td>\n",
+              "      <td>person_income</td>\n",
+              "      <td>person_home_ownership</td>\n",
+              "      <td>person_emp_length</td>\n",
+              "      <td>loan_intent</td>\n",
+              "      <td>loan_grade</td>\n",
+              "      <td>loan_amnt</td>\n",
+              "      <td>loan_int_rate</td>\n",
+              "      <td>loan_status</td>\n",
+              "      <td>loan_percent_income</td>\n",
+              "      <td>cb_person_default_on_file</td>\n",
+              "      <td>cb_person_cred_hist_length</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>22</td>\n",
+              "      <td>59000</td>\n",
+              "      <td>RENT</td>\n",
+              "      <td>123.0</td>\n",
+              "      <td>PERSONAL</td>\n",
+              "      <td>D</td>\n",
+              "      <td>35000</td>\n",
+              "      <td>16.02</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.59</td>\n",
+              "      <td>Y</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>21</td>\n",
+              "      <td>9600</td>\n",
+              "      <td>OWN</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>EDUCATION</td>\n",
+              "      <td>B</td>\n",
+              "      <td>1000</td>\n",
+              "      <td>11.14</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>N</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>25</td>\n",
+              "      <td>9600</td>\n",
+              "      <td>MORTGAGE</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>MEDICAL</td>\n",
+              "      <td>C</td>\n",
+              "      <td>5500</td>\n",
+              "      <td>12.87</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.57</td>\n",
+              "      <td>N</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>23</td>\n",
+              "      <td>65500</td>\n",
+              "      <td>RENT</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>MEDICAL</td>\n",
+              "      <td>C</td>\n",
+              "      <td>35000</td>\n",
+              "      <td>15.23</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.53</td>\n",
+              "      <td>N</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>24</td>\n",
+              "      <td>54400</td>\n",
+              "      <td>RENT</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>MEDICAL</td>\n",
+              "      <td>C</td>\n",
+              "      <td>35000</td>\n",
+              "      <td>14.27</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.55</td>\n",
+              "      <td>Y</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>21</td>\n",
+              "      <td>9900</td>\n",
+              "      <td>OWN</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>VENTURE</td>\n",
+              "      <td>A</td>\n",
+              "      <td>2500</td>\n",
+              "      <td>7.14</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.25</td>\n",
+              "      <td>N</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>26</td>\n",
+              "      <td>77100</td>\n",
+              "      <td>RENT</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>EDUCATION</td>\n",
+              "      <td>B</td>\n",
+              "      <td>35000</td>\n",
+              "      <td>12.42</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.45</td>\n",
+              "      <td>N</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>24</td>\n",
+              "      <td>78956</td>\n",
+              "      <td>RENT</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>MEDICAL</td>\n",
+              "      <td>B</td>\n",
+              "      <td>35000</td>\n",
+              "      <td>11.11</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.44</td>\n",
+              "      <td>N</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>24</td>\n",
+              "      <td>83000</td>\n",
+              "      <td>RENT</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>PERSONAL</td>\n",
+              "      <td>A</td>\n",
+              "      <td>35000</td>\n",
+              "      <td>8.9</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.42</td>\n",
+              "      <td>N</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-acfb0221-0af7-4b61-8dc2-0b628885ef90')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-acfb0221-0af7-4b61-8dc2-0b628885ef90 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-acfb0221-0af7-4b61-8dc2-0b628885ef90');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     }
   ]
 }
