bivariate analysis on numerical features

--- a/CMPE_255_Final.ipynb
+++ b/CMPE_255_Final.ipynb
@@ -4,55 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "79vG5A3a5Dho",
-        "gcKIbdwWLi8A",
-        "x8p5My8Y6A8G",
-        "jCoUBBILLsrx",
-        "N1xTJJnpkeGu",
-        "Fg9XHyneLpPb",
-        "X4YG4U2Hn6at",
-        "v_YdOHL3oGlZ",
-        "qYojjkMbtjrc",
-        "7hDF24AbphL1",
-        "6Daox8BNwSPc",
-        "XqC-Cxxawy8r",
-        "cU0hWRbRnpTR",
-        "SOycpx4lxW-I",
-        "3Vt6-oiO3X3_",
-        "0SmLImgJ5FFH",
-        "VYTQUWnj88tD",
-        "2uhUq_hM5Mgp",
-        "WK9vmTpZ6s0U",
-        "lMjexNL18rKU",
-        "QWP_VZL3BYPo",
-        "XuMnDlG98t52",
-        "alMai93gA2D5",
-        "qWlmejXSB52M",
-        "x60xZ8y9CIph",
-        "6ep_SwK9CJnh",
-        "UNj14x1qCJ-U",
-        "pjuNYI2V2JYg",
-        "PSDjM_gGKKBO",
-        "RcBtblWpasGG",
-        "VbOs9Udmc5m2",
-        "KXJ4BoerdtFe",
-        "Et9e_WyAd-M1",
-        "An9LuoEvevYI",
-        "3_IeuhF_fqlF",
-        "fHlFe2Jk2voe",
-        "kGl9JwlOgkwJ",
-        "VLM3xWP6iEX3",
-        "46IVtxbxjJPo",
-        "3Wf1KridjXxn",
-        "Y-EFIe6ukQ-d",
-        "GpxC6gpCkdgX",
-        "YfPL1S7Ykqav",
-        "toounobSk707",
-        "2Vxtw2vh3MKT",
-        "Hl1qLHS3lKmm",
-        "tFLu1C3_koMw"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -532,6 +483,204 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##EXPLORATORY DATA ANALYSIS"
+      ],
+      "metadata": {
+        "id": "x8p5My8Y6A8G"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###univariate analysis of continuous variables"
+      ],
+      "metadata": {
+        "id": "jCoUBBILLsrx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "measures_df = base_credit.select_dtypes(include='number')"
+      ],
+      "metadata": {
+        "id": "W1rqbWY1MV0T",
+        "outputId": "1a11baff-337a-45b0-eaac-b48d58f98907",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-9cb1a6d27358>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmeasures_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbase_credit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect_dtypes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minclude\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'number'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'base_credit' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "measures_df"
+      ],
+      "metadata": {
+        "id": "iGfKMw34OSle"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "measures_df.describe()"
+      ],
+      "metadata": {
+        "id": "mR2dygnkNdLc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "columns = list(measures_df.columns)\n",
+        "columns.remove('loan_status')\n",
+        "columns"
+      ],
+      "metadata": {
+        "id": "2bxA-MvoQi5h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grp = base_credit.groupby('loan_status')\n",
+        "for col in columns:\n",
+        "    plt.figure()\n",
+        "    #plt.hist(base_credit[col], density = True)\n",
+        "    grp[col].plot(kind='kde')\n",
+        "    x = col\n",
+        "    plt.xlabel(x)\n",
+        "    y = 'Density'\n",
+        "    plt.ylabel(y)\n",
+        "    plt.title('Distribution of {xLabel}'.format(xLabel=x))"
+      ],
+      "metadata": {
+        "id": "pEnQbrJJKSJh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###bivariate analysis on numerical features"
+      ],
+      "metadata": {
+        "id": "N1xTJJnpkeGu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.pairplot(measures_df, hue = 'loan_status', corner = True)"
+      ],
+      "metadata": {
+        "id": "TktH4TUoNS6W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "measures_df.boxplot(column = 'person_age', by='loan_status')"
+      ],
+      "metadata": {
+        "id": "jRrAcwcia82O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "measures_df.boxplot(column=['person_age'],by='loan_status')"
+      ],
+      "metadata": {
+        "id": "PPs0FXYKb9Hn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit['person_home_ownership'].value_counts()"
+      ],
+      "metadata": {
+        "id": "qcXSF5OVkpes"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit['loan_intent'].value_counts()"
+      ],
+      "metadata": {
+        "id": "D25icqJ6mTNg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit['loan_grade'].value_counts()"
+      ],
+      "metadata": {
+        "id": "EbD8ZEzlmaSa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit['cb_person_default_on_file'].value_counts()"
+      ],
+      "metadata": {
+        "id": "JC4biCN1mcsj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.boxplot(data=base_credit, x=\"person_age\", y=\"cb_person_default_on_file\", hue=\"loan_status\")"
+      ],
+      "metadata": {
+        "id": "j6fp7ZvymfxI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
