--- a/CMPE_255_Final.ipynb
+++ b/CMPE_255_Final.ipynb
@@ -4,6 +4,53 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "gDyaws8X5nz6",
+        "Fg9XHyneLpPb",
+        "X4YG4U2Hn6at",
+        "v_YdOHL3oGlZ",
+        "qYojjkMbtjrc",
+        "7hDF24AbphL1",
+        "6Daox8BNwSPc",
+        "v_MUyTwTwmgu",
+        "XqC-Cxxawy8r",
+        "cU0hWRbRnpTR",
+        "SOycpx4lxW-I",
+        "3Vt6-oiO3X3_",
+        "0SmLImgJ5FFH",
+        "VYTQUWnj88tD",
+        "2uhUq_hM5Mgp",
+        "WK9vmTpZ6s0U",
+        "lMjexNL18rKU",
+        "QWP_VZL3BYPo",
+        "XuMnDlG98t52",
+        "alMai93gA2D5",
+        "qWlmejXSB52M",
+        "x60xZ8y9CIph",
+        "6ep_SwK9CJnh",
+        "UNj14x1qCJ-U",
+        "pjuNYI2V2JYg",
+        "WKr0Pg4XY9M4",
+        "PSDjM_gGKKBO",
+        "RcBtblWpasGG",
+        "VbOs9Udmc5m2",
+        "KXJ4BoerdtFe",
+        "Et9e_WyAd-M1",
+        "An9LuoEvevYI",
+        "3_IeuhF_fqlF",
+        "fHlFe2Jk2voe",
+        "kGl9JwlOgkwJ",
+        "VLM3xWP6iEX3",
+        "46IVtxbxjJPo",
+        "3Wf1KridjXxn",
+        "Y-EFIe6ukQ-d",
+        "GpxC6gpCkdgX",
+        "YfPL1S7Ykqav",
+        "toounobSk707",
+        "2Vxtw2vh3MKT",
+        "Hl1qLHS3lKmm",
+        "tFLu1C3_koMw"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -681,6 +728,328 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##PREPROCESSING"
+      ],
+      "metadata": {
+        "id": "gDyaws8X5nz6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###dropping null valued rows"
+      ],
+      "metadata": {
+        "id": "Fg9XHyneLpPb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QadVTg0EJ7Zl",
+        "outputId": "e2e59368-8ca0-4ecd-aed9-1815338de590"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "person_age                       0\n",
+              "person_income                    0\n",
+              "person_home_ownership            0\n",
+              "person_emp_length              895\n",
+              "loan_intent                      0\n",
+              "loan_grade                       0\n",
+              "loan_amnt                        0\n",
+              "loan_int_rate                 3116\n",
+              "loan_status                      0\n",
+              "loan_percent_income              0\n",
+              "cb_person_default_on_file        0\n",
+              "cb_person_cred_hist_length       0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit = base_credit.dropna()"
+      ],
+      "metadata": {
+        "id": "VhUWPBv6KL-E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit.describe()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H-WuT_VFKGfT",
+        "outputId": "6b87ec76-f0d9-4c85-cc4b-e200db81682a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "         person_age  person_income  person_emp_length     loan_amnt  \\\n",
+              "count  28638.000000   2.863800e+04       28638.000000  28638.000000   \n",
+              "mean      27.727216   6.664937e+04           4.788672   9656.493121   \n",
+              "std        6.310441   6.235645e+04           4.154627   6329.683361   \n",
+              "min       20.000000   4.000000e+03           0.000000    500.000000   \n",
+              "25%       23.000000   3.948000e+04           2.000000   5000.000000   \n",
+              "50%       26.000000   5.595600e+04           4.000000   8000.000000   \n",
+              "75%       30.000000   8.000000e+04           7.000000  12500.000000   \n",
+              "max      144.000000   6.000000e+06         123.000000  35000.000000   \n",
+              "\n",
+              "       loan_int_rate   loan_status  loan_percent_income  \\\n",
+              "count   28638.000000  28638.000000         28638.000000   \n",
+              "mean       11.039867      0.216600             0.169488   \n",
+              "std         3.229372      0.411935             0.106393   \n",
+              "min         5.420000      0.000000             0.000000   \n",
+              "25%         7.900000      0.000000             0.090000   \n",
+              "50%        10.990000      0.000000             0.150000   \n",
+              "75%        13.480000      0.000000             0.230000   \n",
+              "max        23.220000      1.000000             0.830000   \n",
+              "\n",
+              "       cb_person_cred_hist_length  \n",
+              "count                28638.000000  \n",
+              "mean                     5.793736  \n",
+              "std                      4.038483  \n",
+              "min                      2.000000  \n",
+              "25%                      3.000000  \n",
+              "50%                      4.000000  \n",
+              "75%                      8.000000  \n",
+              "max                     30.000000  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-2d8cda48-228d-4e01-a7fa-09f512b308a6\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>person_age</th>\n",
+              "      <th>person_income</th>\n",
+              "      <th>person_emp_length</th>\n",
+              "      <th>loan_amnt</th>\n",
+              "      <th>loan_int_rate</th>\n",
+              "      <th>loan_status</th>\n",
+              "      <th>loan_percent_income</th>\n",
+              "      <th>cb_person_cred_hist_length</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>28638.000000</td>\n",
+              "      <td>2.863800e+04</td>\n",
+              "      <td>28638.000000</td>\n",
+              "      <td>28638.000000</td>\n",
+              "      <td>28638.000000</td>\n",
+              "      <td>28638.000000</td>\n",
+              "      <td>28638.000000</td>\n",
+              "      <td>28638.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>27.727216</td>\n",
+              "      <td>6.664937e+04</td>\n",
+              "      <td>4.788672</td>\n",
+              "      <td>9656.493121</td>\n",
+              "      <td>11.039867</td>\n",
+              "      <td>0.216600</td>\n",
+              "      <td>0.169488</td>\n",
+              "      <td>5.793736</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>6.310441</td>\n",
+              "      <td>6.235645e+04</td>\n",
+              "      <td>4.154627</td>\n",
+              "      <td>6329.683361</td>\n",
+              "      <td>3.229372</td>\n",
+              "      <td>0.411935</td>\n",
+              "      <td>0.106393</td>\n",
+              "      <td>4.038483</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>20.000000</td>\n",
+              "      <td>4.000000e+03</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>500.000000</td>\n",
+              "      <td>5.420000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>23.000000</td>\n",
+              "      <td>3.948000e+04</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>5000.000000</td>\n",
+              "      <td>7.900000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.090000</td>\n",
+              "      <td>3.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>26.000000</td>\n",
+              "      <td>5.595600e+04</td>\n",
+              "      <td>4.000000</td>\n",
+              "      <td>8000.000000</td>\n",
+              "      <td>10.990000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.150000</td>\n",
+              "      <td>4.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>30.000000</td>\n",
+              "      <td>8.000000e+04</td>\n",
+              "      <td>7.000000</td>\n",
+              "      <td>12500.000000</td>\n",
+              "      <td>13.480000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.230000</td>\n",
+              "      <td>8.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>144.000000</td>\n",
+              "      <td>6.000000e+06</td>\n",
+              "      <td>123.000000</td>\n",
+              "      <td>35000.000000</td>\n",
+              "      <td>23.220000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.830000</td>\n",
+              "      <td>30.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2d8cda48-228d-4e01-a7fa-09f512b308a6')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-2d8cda48-228d-4e01-a7fa-09f512b308a6 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-2d8cda48-228d-4e01-a7fa-09f512b308a6');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 187
+        }
+      ]
     }
   ]
 }
