--- a/CMPE_255_Final.ipynb
+++ b/CMPE_255_Final.ipynb
@@ -1170,6 +1170,80 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###eliminating outliers"
+      ],
+      "metadata": {
+        "id": "v_YdOHL3oGlZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_XBedtGOo-c_",
+        "outputId": "34715f92-6159-4889-b2df-6a652fb4118c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(28638, 12)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 190
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for col in columns:\n",
+        "  base_credit = base_credit[(base_credit[col] <= base_credit[col].mean() + 3*base_credit[col].std()) &\n",
+        "        (base_credit[col] >= base_credit[col].mean() - 3*base_credit[col].std())]"
+      ],
+      "metadata": {
+        "id": "97yzCB9uoKAa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EkummOV6o9cp",
+        "outputId": "795fa809-e62a-4707-fdca-35fcad94e24c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(26620, 12)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 192
+        }
+      ]
     }
   ]
 }
