separating target values, splitting into train test and standardizing data

--- a/CMPE_255_Final.ipynb
+++ b/CMPE_255_Final.ipynb
@@ -2061,6 +2061,137 @@
           "execution_count": 204
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###stripping target values"
+      ],
+      "metadata": {
+        "id": "7hDF24AbphL1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features = New_df.drop('loan_status', 1)\n",
+        "target = New_df['loan_status']"
+      ],
+      "metadata": {
+        "id": "4hxDmszUpgbq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sEYxIMwEpvye",
+        "outputId": "8fbf7362-1a15-456f-8fdc-806337a1f0a6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(26620, 30)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 206
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "target.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xsCO1Ytjpyk1",
+        "outputId": "1bf4bcc3-596b-49fd-94cd-7cbb8f004804"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1     0\n",
+              "5     1\n",
+              "9     1\n",
+              "11    1\n",
+              "19    1\n",
+              "Name: loan_status, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 207
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "del New_df"
+      ],
+      "metadata": {
+        "id": "YBlleeOhvm_D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###train test split"
+      ],
+      "metadata": {
+        "id": "6Daox8BNwSPc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train, x_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=0)"
+      ],
+      "metadata": {
+        "id": "16x3qWHrwTib"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###standardising data"
+      ],
+      "metadata": {
+        "id": "v_MUyTwTwmgu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scaler = StandardScaler()\n",
+        "x_train = scaler.fit_transform(x_train)\n",
+        "x_test = scaler.transform(x_test)"
+      ],
+      "metadata": {
+        "id": "dbqMoggRwn_j"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
