oversampling using SMOTE

--- a/CMPE_255_Final.ipynb
+++ b/CMPE_255_Final.ipynb
@@ -2192,6 +2192,202 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###feature extraction"
+      ],
+      "metadata": {
+        "id": "XqC-Cxxawy8r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Estimator = RandomForestClassifier(n_estimators=10) \n",
+        "#using random forest as the estimator for recursive feature extractor\n",
+        "FeatureExtractor = RFE(estimator=Estimator, n_features_to_select=20)\n",
+        "fitter = FeatureExtractor.fit(x_train, y_train)\n",
+        "extracted_features = features.columns[(fitter.get_support())]"
+      ],
+      "metadata": {
+        "id": "sduNW2DXwp-u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "extracted_features"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DxCybUFk0DH7",
+        "outputId": "97a7d51b-885a-46a3-e7f9-2aa20978811f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index([                   'person_age',                 'person_income',\n",
+              "                   'person_emp_length',                     'loan_amnt',\n",
+              "                       'loan_int_rate',           'loan_percent_income',\n",
+              "          'cb_person_cred_hist_length', 'cb_person_default_on_file_new',\n",
+              "                      'loan_grade_new',               'loan_intent_new',\n",
+              "           'person_home_ownership_new',                               4,\n",
+              "                                     5,                               9,\n",
+              "                                    10,                              11,\n",
+              "                                    12,                              15,\n",
+              "                                    17,                              18],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 212
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fitter.get_support()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8Zv1Khei1B2a",
+        "outputId": "00e3273f-4aaa-44bd-d7a2-d06aa439ba9a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+              "        True,  True, False, False, False, False,  True,  True, False,\n",
+              "       False, False,  True,  True,  True,  True, False, False,  True,\n",
+              "       False,  True,  True])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 213
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "featureSelectedTrain = [row[fitter.get_support()] for row in x_train]\n",
+        "featureSelectedTest = [row[fitter.get_support()] for row in x_test]"
+      ],
+      "metadata": {
+        "id": "tQNChUUj0WRD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###class imbalance"
+      ],
+      "metadata": {
+        "id": "cU0hWRbRnpTR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_credit['loan_status'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E6T365OZnHff",
+        "outputId": "7f98aad6-1830-45da-e4db-1a95ffb5b93d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    21039\n",
+              "1     5581\n",
+              "Name: loan_status, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 215
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####upsampling"
+      ],
+      "metadata": {
+        "id": "SOycpx4lxW-I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "upsampler = SMOTE(random_state = 5)\n",
+        "x_train_ures_SMOTE, y_train_ures_SMOTE = upsampler.fit_resample(x_train, y_train.ravel())"
+      ],
+      "metadata": {
+        "id": "ceXqATsAxNgS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Before OverSampling, the shape of train_X: {}'.format(x_train.shape))\n",
+        "print('Before OverSampling, the shape of train_y: {} \\n'.format(y_train.shape))\n",
+        "\n",
+        "print('After OverSampling, the shape of train_X: {}'.format(x_train_ures_SMOTE.shape))\n",
+        "print('After OverSampling, the shape of train_y: {} \\n'.format(y_train_ures_SMOTE.shape))\n",
+        "\n",
+        "print(\"Counts of label '0' - Before Oversampling:{}, After OverSampling: {}\".format(sum(y_train == 0),sum(y_train_ures_SMOTE == 0)))\n",
+        "print(\"Counts of label '1' - Before Oversampling:{}, After OverSampling: {}\".format(sum(y_train == 1),sum(y_train_ures_SMOTE == 1)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z3jferhW3w6J",
+        "outputId": "7989f1c8-0dbd-4c97-fc3e-0b3f923a3883"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before OverSampling, the shape of train_X: (21296, 30)\n",
+            "Before OverSampling, the shape of train_y: (21296,) \n",
+            "\n",
+            "After OverSampling, the shape of train_X: (33616, 30)\n",
+            "After OverSampling, the shape of train_y: (33616,) \n",
+            "\n",
+            "Counts of label '0' - Before Oversampling:16808, After OverSampling: 16808\n",
+            "Counts of label '1' - Before Oversampling:4488, After OverSampling: 16808\n"
+          ]
+        }
+      ]
     }
   ]
 }
